<resources>
    <string name="app_name">Mixture</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="news">新闻</string>
    <string name="joke">笑话</string>
    <string name="picture">图片</string>
    <string name="me">我</string>
    <string name="uname">账户</string>
    <string name="upwd">密码</string>


    <string name="action_settings">关于</string>
    <string name="load_error">加载出错</string>
    <string name="transition_news_img">transition_news_img</string>
    <string name="loading">正在加载...</string>
    <string name="btn_try_again">重试</string>

    <!--主页-->
    <string name="main_tab_news">最新新闻</string>
    <string name="main_tab_picture">美图大全</string>
    <string name="main_tab_weather">天气预报</string>

    <!--天气预报-->
    <string name="weather_dialog_aqi">污染指数:%1$s</string>
    <string name="weather_dialog_sd">湿度:%1$s</string>
    <string name="weather_dialog_wind_direction">风向:%1$s</string>
    <string name="weather_dialog_wind_power">风力强度:%1$s</string>
    <string name="weather_edit_hint">请输入城市名(如：北京)</string>
    <string name="weather_btn">查询当前天气</string>
    <string name="name">账号</string>
    <string name="Newname">账号</string>
    <string name="Newpwd">密码</string>
    <string name="btn_resg">注册</string>
    <string name="pwd">密码</string>
    <string name="log">登录</string>
    <string name="res">注册</string>
    <string name="register">注册</string>
    <string name="login">登录</string>


</resources>
